# connectedhomeip

config/linux/lib/pw_rpc/: BUILD.gn
examples/ipv6only-app/esp32/: CMakeLists.txt  README.md
examples/ipv6only-app/esp32/main/: CMakeLists.txt  main.cpp
examples/lighting-app/efr32/src/: Rpc.cpp
examples/lighting-app/lighting-common/: pigweed_lighting.options  pigweed_lighting.proto
examples/lighting-app/linux/: BUILD.gn  Rpc.cpp  args.gni  main.cpp
examples/lighting-app/nrfconnect/main/: Rpc.cpp
examples/lock-app/cc13x2_26x2/: BUILD.gn
examples/lock-app/esp32/: CMakeLists.txt  README.md
examples/lock-app/esp32/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
examples/platform/esp32/pw_sys_io/: CMakeLists.txt
