# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")
import("//build_overrides/pigweed.gni")
import("$dir_pw_protobuf_compiler/proto.gni")
import("$dir_pw_build/target_types.gni")

import("${chip_root}/build/chip/tools.gni")
import("${chip_root}/src/app/common_flags.gni")

assert(chip_build_tools)

config("includes") {
  include_dirs = [
    ".",
    "include",
  ]
}

  pw_proto_library("pw_light_service_proto") {
    sources = [ "${chip_root}/examples/lighting-app/lighting-common/pigweed_lighting.proto" ]
    inputs = [ "${chip_root}/examples/lighting-app/lighting-common/pigweed_lighting.options" ]
  }

executable("chip-lighting-app") {
  sources = [
    "LightingManager.cpp",
    "Options.cpp",
    "include/LightingManager.h",
    "main.cpp",
  ]

  sources += [
    "${dir_pigweed}/targets/host/system_rpc_server.cc",
    "${dir_pw_hdlc}/rpc_example/hdlc_rpc_server.cc"
  ]
  public_configs = [ ":includes" ]

  deps = [
    "${chip_root}/examples/lighting-app/lighting-common",
    "${chip_root}/src/lib",
  ]

  public_deps = [
    "$dir_pw_rpc:server",
    "$dir_pw_rpc/nanopb:echo_service",
    "$dir_pw_rpc/system_server",
    dir_pw_hdlc,
    dir_pw_log,
    "$dir_pw_sync:mutex",
    ":pw_light_service_proto.nanopb_rpc",
    "$dir_pw_checksum",
    "$dir_pw_stream",
    "${chip_root}/config/linux/lib/pw_rpc:pw_rpc",
  ]

  sources += [
    "Rpc.cpp",
  ]
  include_dirs = [
    "out/debug/gen/pw_light_service_proto/third_party/connectedhomeip/examples/lighting-app/lighting-common",
  ]
  output_dir = root_out_dir
}

group("linux") {
  deps = [ ":chip-lighting-app" ]
}
